--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -12,6 +12,8 @@
     }
   ],
   "compilerOptions": {
+    "noImplicitAny": false,
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
       "@/*":["src/*"]
