--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,8 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@nestjs/platform-socket.io": "^9.3.10",
+    "@nestjs/websockets": "^9.3.10",
     "@userfront/vue": "^0.1.19",
     "axios": "^1.3.4",
+    "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13"
   },
