--- a/src/frontend/tsconfig.vitest.json
+++ b/src/frontend/tsconfig.vitest.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.app.json",
   "exclude": [],
   "compilerOptions": {
+    "noImplicitAny": false,
     "composite": true,
     "lib": [],
     "types": ["node", "jsdom"]
