--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -26,6 +26,9 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.10",
+    "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/websockets": "^9.3.10",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "mongoose": "^6.10.3",
