--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -26,6 +26,9 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.11",
+    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.3.11",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "mongoose": "^6.10.3",
@@ -34,8 +37,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
