--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -42,7 +42,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
