--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.3.4",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuetify": "^3.1.11"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
