--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -27,9 +27,8 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.11",
-    "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.3.11",
     "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.10",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
@@ -42,8 +41,8 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
