added the controller for the chat

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
   "compilerOptions": {
+    "experimentalDecorators": true,
     "noImplicitAny": false,
     "allowJs": true,
     "baseUrl": ".",
