--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.13",
     "vuetify": "^3.1.11"
   },
