--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -25,13 +25,15 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.3.11",
+    "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/platform-socket.io": "^9.3.12",
+    "@nestjs/platform-ws": "^9.3.12",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.3.10",
+    "@nestjs/websockets": "^9.3.12",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dto": "^0.0.1",
     "mongoose": "^6.10.3",
@@ -44,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
