--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,9 +22,9 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^4.1.6"
+    "vue-otp-input": "^1.0.0",
+    "vue-router": "^4.1.6",
+    "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
