--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,7 +24,8 @@
     "vue": "^3.2.47",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
