--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -32,6 +32,8 @@
     "@nestjs/websockets": "^9.3.10",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^6.10.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
