--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "mongoose": "^6.10.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
