--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,11 +22,12 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
+    "vue-cookie-next": "^1.3.0",
     "vue-cookies": "^1.8.3",
+    "vue-cookies-ts": "^1.5.19",
     "vue-otp-input": "^1.0.0",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
-    "vue3-cookies": "^1.0.6",
     "vue3-qrcode-reader": "^0.0.1",
     "vue3-storage": "^0.1.11"
   },
