--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -28,10 +28,7 @@
     "vue-otp-input": "^1.0.0",
     "vue-session": "^1.0.0",
     "vue3-qrcode-reader": "^0.0.1",
-    "vue3-storage": "^0.1.11"
-    "vue-property-decorator": "^9.1.2",
-    "vuetify": "^3.1.11",
-    "vue-class-component": "^7.2.6",
+    "vuetify": "^3.1.11"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
