--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "mongoose": "^6.10.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
