--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -23,6 +23,7 @@
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
     "vue-cookie-next": "^1.3.0",
+    "vue-cookies": "^1.8.3",
     "vue-otp-input": "^1.0.0",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
@@ -46,7 +47,7 @@
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
+    "prettier": "2.8.7",
     "tailwindcss": "^3.2.7",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
