--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "mongoose": "^6.10.3",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
@@ -53,6 +54,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
