--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -37,12 +37,14 @@
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.3",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "pg": "^8.10.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
