--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@nestjs/websockets": "^9.3.10",
     "@userfront/vue": "^0.1.19",
     "axios": "^1.3.4",
+    "pinia": "^2.0.33",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
