--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,11 +19,13 @@
     "@nestjs/websockets": "^9.3.10",
     "@userfront/vue": "^0.1.19",
     "axios": "^1.3.4",
+    "qrcode.vue": "^3.3.4",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
     "vue-cookie-next": "^1.3.0",
     "vue-otp-input": "^1.0.0",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue3-qrcode-reader": "^0.0.1",
     "vuetify": "^3.1.11"
