Correct format send back for user channel messages

--- a/src/frontend/tsconfig.vitest.json
+++ b/src/frontend/tsconfig.vitest.json
@@ -5,6 +5,7 @@
     "noImplicitAny": false,
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom"],
+    "allowJs": true
   }
 }
