--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.2.47",
     "vue-cookie-next": "^1.3.0",
     "vue-cookies": "^1.8.3",
+    "vue-enums": "^1.0.0",
     "vue-otp-input": "^1.0.0",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
