--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.3",
     "n": "^9.0.1",
@@ -64,6 +65,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "29.2.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
