--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,8 @@
     "@nestjs/websockets": "^9.3.10",
     "@userfront/vue": "^0.1.19",
     "axios": "^1.3.4",
+    "bus": "^0.1.0",
+    "composition-api": "^0.0.0",
     "pinia": "^2.0.33",
     "qrcode.vue": "^3.3.4",
     "socket.io": "^4.6.1",
