--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -31,8 +31,7 @@
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
-    "vue3-qrcode-reader": "^0.0.1",
-    "vuetify": "^3.1.11"
+    "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
@@ -53,7 +52,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "2.8.7",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
