--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -31,11 +31,9 @@
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
-    "vue3-qrcode-reader": "^0.0.1",
-    "vuetify": "^3.1.11"
+    "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
-    "@mdi/font": "^7.2.96",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
