--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.17",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/platform-socket.io": "^9.3.10",
     "@nestjs/serve-static": "^3.0.1",
