--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -23,17 +23,21 @@
     "bus": "^0.1.0",
     "composition-api": "^0.0.0",
     "pinia": "^2.0.33",
+    "primevue": "^3.28.0",
     "qrcode.vue": "^3.3.4",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
+    "vue-autosuggest": "^2.2.0",
     "vue-cookie-next": "^1.3.0",
     "vue-cookies": "^1.8.3",
     "vue-enums": "^1.0.0",
+    "vue-instant": "^1.0.4",
     "vue-otp-input": "^1.0.0",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue-session": "^1.0.0",
+    "vue-simple-search-dropdown": "^1.0.1",
     "vue3-qrcode-reader": "^0.0.1"
   },
   "devDependencies": {
