--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -35,6 +35,7 @@
     "@types/qrcode": "^1.5.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
