Added groupicons, moved the joining of rooms to the backend and more.

--- a/src/backend/.prettierrc
+++ b/src/backend/.prettierrc
@@ -1,5 +1,8 @@
 {
+  "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": false,
+  "tabWidth": 4,
   "singleQuote": true,
-  "trailingComma": "all",
-  "tabWidth": 4
+  "printWidth": 100,
+  "trailingComma": "none"
 }
